Improve PDF design and allow pdf download within the application